[package]
name = "network-initializer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
toml = "0.8.19"
# wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
wg_2024 = { git = "https://github.com/The-Null-Pointer-Patrol/WGL_repo_2024.git", branch = "makes-netinitializer-work" ,features = ["serialize"]}
null-pointer-drone = { git = "https://github.com/The-Null-Pointer-Patrol/null-pointer-drone.git"}