[package]
name = "network-initializer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
toml = "0.8.19"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
null-pointer-drone = { git = "https://github.com/The-Null-Pointer-Patrol/null-pointer-drone.git"}
ap24-simulation-controller = { git = "https://github.com/marcoff181/ap24-simulation-controller.git"}